[package]
name = "cosmos"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmrs = { version = "0.15.0", features = ["bip32", "rpc", "grpc"] }
cosmos-sdk-proto = { version = "0.20.0", features = ["grpc-transport", "tonic"] }
bip32 = { version = "0.5.1", features = ["bip39", "std"] }
bip39 = "2.0.0"
thiserror = "1.0.43"
clap = "4.5.2"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.11.26"
tonic = { version = "0.10.2", features = ["default", "tls", "tls-roots"] }
prost = "0.12.3"
eyre = "0.6.12"
rand = "0.8.5"

[lib]
name = "cosmos"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "list"
path = "src/bin/list.rs"

[[bin]]
name = "run"
path = "src/bin/stake.rs"

